src/objects/Manual_Batch_Run_Dates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manual Batch Run Dates for SP Jobs</description>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <description>SP Job Batch Run Date</description>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isManualrun__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is SP Job Manual run</description>
        <label>isManualrun</label>
        <type>Checkbox</type>
    </fields>
    <label>Manual Batch Run Dates</label>
</CustomObject>